--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -14,9 +14,14 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@supabase/supabase-js": "^2.50.0",
+    "@types/qrcode": "^1.5.5",
     "framer-motion": "^12.19.1",
+    "html5-qrcode": "^2.3.8",
     "lucide-react": "^0.522.0",
     "next": "15.3.4",
+    "qr-scanner": "^1.4.2",
+    "qrcode": "^1.5.4",
+    "qrcode-generator": "^1.5.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
