--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
+    "@react-native-async-storage/async-storage": "^1.21.0",
     "expo": "~53.0.12",
     "expo-barcode-scanner": "^13.0.1",
     "expo-camera": "~16.1.8",
