--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 node_modules
 
-# Python Virtual Environments
+# Python Virtual Environments (keep these ignored)
 backend/supabase-env/
 venv/
 env/
@@ -43,12 +43,14 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# Environment variables
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+# Environment variables - COMMENTED OUT for easier project setup
+# Note: .env files are now tracked to help team members get started quickly
+# Make sure no sensitive production credentials are in these files!
+# .env
+# .env.local
+# .env.development.local
+# .env.test.local
+# .env.production.local
 
 # IDE
 .vscode/
