--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,14 +11,15 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.4",
+    "@react-native-async-storage/async-storage": "^1.21.0",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
-    "@react-native-async-storage/async-storage": "^1.21.0",
     "expo": "~53.0.12",
     "expo-barcode-scanner": "^13.0.1",
     "expo-camera": "~16.1.8",
     "expo-haptics": "~13.0.1",
+    "expo-image-picker": "~16.1.4",
     "expo-linear-gradient": "~14.0.1",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
