--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,25 +11,30 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.4",
+    "@react-native-async-storage/async-storage": "2.1.2",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
-    "@react-native-async-storage/async-storage": "^1.21.0",
     "expo": "~53.0.12",
     "expo-barcode-scanner": "^13.0.1",
     "expo-camera": "~16.1.8",
-    "expo-haptics": "~13.0.1",
-    "expo-linear-gradient": "~14.0.1",
+    "expo-image-picker": "~16.1.4",
+    "expo-haptics": "~14.1.4",
+    "expo-linear-gradient": "~14.1.5",
+    "expo-local-authentication": "~16.0.4",
+    "expo-localization": "^16.1.5",
     "expo-status-bar": "~2.2.3",
+    "expo-file-system": "~18.1.10",
     "react": "19.0.0",
     "react-native": "0.79.4",
     "react-native-elements": "^3.4.3",
-    "react-native-gesture-handler": "~2.20.2",
+    "react-native-gesture-handler": "~2.24.0",
     "react-native-paper": "^5.12.3",
-    "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "~4.11.0",
-    "react-native-screens": "~4.2.0",
-    "react-native-vector-icons": "^10.0.3"
+    "react-native-reanimated": "~3.17.4",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.11.1",
+    "react-native-vector-icons": "^10.0.3",
+    "react-native-webview": "13.13.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
