--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,19 +12,20 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.4",
     "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-community/slider": "^5.0.0",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
     "expo": "~53.0.12",
     "expo-barcode-scanner": "^13.0.1",
     "expo-camera": "~16.1.8",
-    "expo-image-picker": "~16.1.4",
+    "expo-file-system": "~18.1.10",
     "expo-haptics": "~14.1.4",
+    "expo-image-picker": "~16.1.4",
     "expo-linear-gradient": "~14.1.5",
     "expo-local-authentication": "~16.0.4",
     "expo-localization": "^16.1.5",
     "expo-status-bar": "~2.2.3",
-    "expo-file-system": "~18.1.10",
     "react": "19.0.0",
     "react-native": "0.79.4",
     "react-native-elements": "^3.4.3",
