--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "~4.11.0",
     "react-native-screens": "~4.2.0",
+    "react-native-svg": "^15.12.0",
     "react-native-vector-icons": "^10.0.3"
   },
   "devDependencies": {
