name updated to satupay

--- a/backend/.env
+++ b/backend/.env
@@ -1,9 +1,9 @@
-# PinkPay Payment Switch Environment Configuration
+# SatuPay Payment Switch Environment Configuration
 
 # Flask Configuration
 FLASK_ENV=development
 FLASK_DEBUG=False
-JWT_SECRET_KEY=pinkpay-super-secret-jwt-key-payhack2025
+JWT_SECRET_KEY=SatuPay-super-secret-jwt-key-payhack2025
 
 # Supabase Configuration
 SUPABASE_URL=https://fpoyrthyyxwawmkwemkt.supabase.co
@@ -26,7 +26,7 @@ RATE_LIMIT_PER_HOUR=1000
 
 # Logging Configuration
 LOG_LEVEL=DEBUG
-LOG_FILE=logs/pinkpay.log
+LOG_FILE=logs/SatuPay.log
 
 # Plugin Configuration
 PLUGINS_ENABLED=fx_converter,risk_checker,token_handler
