--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,14 +12,14 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.4",
     "@react-native-async-storage/async-storage": "2.1.2",
-    "@react-native-community/slider": "^5.0.0",
+    "@react-native-community/slider": "^4.5.6",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
     "crypto-js": "^4.2.0",
-    "expo": "53.0.12",
+    "expo": "^53.0.13",
     "expo-barcode-scanner": "^13.0.1",
-    "expo-camera": "~16.1.8",
+    "expo-camera": "~16.1.9",
     "expo-constants": "^17.1.6",
     "expo-crypto": "~14.1.5",
     "expo-device": "~7.1.4",
@@ -42,7 +42,7 @@
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-svg": "^15.11.2",
-    "react-native-vector-icons": "^10.2.0"
+    "react-native-vector-icons": "^10.2.0",
     "react-native-webview": "13.13.5"
   },
   "devDependencies": {
