--- a/zerocode-builder/package.json
+++ b/zerocode-builder/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "next": "15.4.1",
     "react": "19.1.0",
     "react-dnd": "^16.0.1",
